--- a/index.css
+++ b/index.css
@@ -11,8 +11,9 @@ ul {
 }
 
 .container {
+    box-sizing: border-box;
     padding: 0 15px;
-    max-width: 1140px;
+    max-width: 1170px;
     width: 100%;
     margin: 0 auto;
 }
